# build-report-ingestor

./: Cargo.toml  README.md  deny.toml  flake.nix  main.ts  main_test.ts  test_utils.ts
.github/workflows/: test.yml
src/: main.rs  metric.rs  metric_conv.rs  metric_name.rs  model.rs
